# rzn-phone

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.beads/: config.yaml  issues.jsonl
claude_plugin/: ios-tools
crates/rzn_phone_worker/: Cargo.toml
crates/rzn_phone_worker/resources/systems/phone_calls/: system.metadata.yaml
crates/rzn_phone_worker/resources/workflows/: appstore_post_review_v1.json  appstore_screenshots_v1.json  appstore_search_results_v1.json  appstore_typeahead_v1.json  appstore_version_history_v1.json  google_maps_open_directions_v1.json  google_maps_open_place_v1.json  instagram_comment_post_v1.json  instagram_like_post_v1.json  instagram_open_dm_thread_v1.json  instagram_open_post_v1.json  instagram_reply_comment_v1.json  instagram_reply_dm_thread_v1.json  linkedin_daily_scroll_digest_v1.json  linkedin_delete_latest_post_v1.json  linkedin_reply_to_comment_v1.json  linkedin_update_latest_post_v1.json  phone_messages_find_recent_otp_v1.json  reddit_comment_post_v1.json  reddit_daily_scroll_digest_v1.json  reddit_open_post_v1.json  reddit_send_dm_by_username_v1.json  safari_google_search_v1.json  x_create_post_v1.json  x_daily_scroll_digest_v1.json  x_open_inbox_v1.json  x_open_post_v1.json  x_reply_dm_thread_v1.json  x_send_dm_v1.json
crates/rzn_phone_worker/src/: errors.rs  jsonrpc.rs  main.rs  mcp.rs  state.rs  workflows.rs
docs/: DEEP_DIVE.md  agent_setup.md  appstore_workflows.md  linkedin_workflows.md  reddit_workflows.md  releasing.md  tester_kit.md
examples/: agent-handoff.md  ios-tools.mcp.json  rzn-phone.mcp.json
(+84 files in other folders)
