[package]
name = "rzn_phone_worker"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rzn-phone-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "io-std", "process", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
once_cell = "1"
base64 = "0.22"
quick-xml = "0.38"

[dev-dependencies]
httpmock = "0.7"
